# directus-portal

./: .dockerignore  .gitignore  .gitlab-ci.yml  Makefile  README.md  README.todo  cicd_vars.sh  docker-compose.db.yaml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  turbo.json
ansible/: README.md  hosts.yml  install.yml
ansible/vars/: main.yml
apps/cms/: .env  .env.sample  .gitignore  create-app-user.js  package.json  snapshot.yaml
apps/docs/: .env  .gitignore  .nmprc  docusaurus.config.js  meta.js  package.json  sidebars.js  typesense.config.js
apps/web/: .env  .env.example  .eslintrc.js  README.md  next-i18next.config.js  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
clusters/flux/: app-kustomization.yaml  apps-policy.yaml  apps-registry.yaml  dockerconfig.yaml  flux-system-automation.yaml  weave-gitops-dashboard.yaml
docker/: Dockerfile.cms  Dockerfile.web  docker-compose.yml
docker/cms/: .env  Dockerfile  docker-compose.yml  start-cms.sh
docker/database/: docker-compose.yml
docker/docs/: .env  Dockerfile  docker-compose.yml  ecosystem.config.js  start-docs.sh
docker/docsearch-scraper/: Dockerfile  docker-compose.yml
docker/web/: .env  Dockerfile  docker-compose.yml
k8s/: README.md  manifest.yaml
k8s/kompose/: cms-database-persistentvolumeclaim.yaml  cms-deployment.yaml  cms-env-configmap.yaml  cms-env-sample-configmap.yaml  cms-extensions-persistentvolumeclaim.yaml  cms-service.yaml  cms-uploads-persistentvolumeclaim.yaml  db-deployment.yaml  docker-env-configmap.yaml  (+18 more)
(+508 files in other folders)
