[tool.poetry]
name = "icloudeng-portal"
version = "0.1.0"
description = ""
authors = ["Admin Smatflow <project@smatflow.com>"]
readme = "README.md"
packages = [{include = "icloudeng_portal"}]

[tool.poetry.dependencies]
python = "^3.10"
ansible = "^7.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
